infra/aws/self-managed-k8s/gitops/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cets
  labels:
    app.kubernetes.io/part-of: cets
    cets.io/track: aws-self-managed-k8s
