infra/aws/self-managed-k8s/gitops/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cets
  labels:
    app.kubernetes.io/part-of: cets
spec:
  ingressClassName: nginx
  rules:
    - host: tickets.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /readyz
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
